# workflow-cli

./: .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  handlers.py  server.py  state.py
