[project]
name = "ai-workflow-core"
version = "0.1.0"
description = "Strict AI Agent Workflow with MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",              # Model Context Protocol SDK
    "pydantic>=2.0",         # Data validation
    "pydantic-settings",     # Professional .env management
    "google-generativeai"    # (Optional) If you need to call auxiliary AI
]

[project.scripts]
# The 'workflow-cli' command will be created after installation
workflow-cli = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
